Fix rendering on mobile

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ code {
     padding: 1em 1em;
     margin: 1em auto;
     border-radius: 1em;
+    overflow: hidden;
     align: center;
 }
 .project-icons-container p {
@@ -41,6 +42,16 @@ code {
     background: #ba34eb;
     border-radius: 1em;
     padding: 0.1em 0.1em;
+}
+.project-icons-container img {
+    max-width: 100%;
+    max-height: 100%; 
+    position: relative;
+}
+.project-icons-container video {
+    max-width: 100%;
+    max-height: 100%; 
+    position: relative;
 }
 .project-icons-container .veccy_icon {
     aligh: right;
